PRJ_VER=1.3.10
SUMMARY=Fixed rhbz 627794
BODHI_UPDATE_TYPE=bugfix
REDHAT_BUGZILLA=627794
[Changes]
- Resolves: 627794
- Depends on cmake-fedora now.
- Addressed yusake's comments on d9009bf.
- Thanks Fred Chien's patch against that candidate window cannot be closed
  with escape key since selected tone.
- Thanks Fourdollar's patch for Fix plain zhuyin with space as selection problem.

