@@ -6,8 +6,11 @@ REDHAT_BUGZILLA=627794
 - Resolves: 627794
 - Depends on cmake-fedora now.
 - Addressed yusake's comments on d9009bf.
+- Add compile flag for GNOME3.
+- ibus-gnome special symbol
 - Thanks Fred Chien's patch against that candidate window cannot be closed
   with escape key since selected tone.
 - Thanks Fourdollar's patch for Fix plain zhuyin with space as selection problem.
+- Thanks Scott Tsai to point out GType usage.
 
 
